--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 @font-face {
   font-family: 'pixel_cyrnormal';
   src: url('../fonts/rlragd94-webfont.eot');
@@ -12,7 +10,6 @@
   font-style: normal;
 }
 
->>>>>>> js-htmlacademy/master
 html,
 body {
   margin: 0;
@@ -29,11 +26,8 @@ body {
 
 h1,
 h2 {
-<<<<<<< HEAD
   font-family: 'Pixel Cyr';
-=======
   font-family: 'pixel_cyrnormal';
->>>>>>> js-htmlacademy/master
   text-align: center;
   text-shadow: 5px 5px 0 rgba(0, 0, 0, 0.72);
 }
@@ -74,26 +68,19 @@ header {
 .header-soon {
   color: #fff;
   color: rgba(255, 255, 255, 0.6);
-<<<<<<< HEAD
   font-family: 'Pixel Cyr';
   font-size: 26px;
-=======
   font-family: 'pixel_cyrnormal';
   font-size: 26px;
   position: relative;
-  z-index: 1;
->>>>>>> js-htmlacademy/master
-}
+  z-index: 1;}
 
 .header-title {
   font-size: 69px;
   margin: 0 0 28px;
   padding: 0;
-<<<<<<< HEAD
-=======
   position: relative;
   z-index: 1;
->>>>>>> js-htmlacademy/master
 }
 
 .header-description {
@@ -199,10 +186,6 @@ input[type=radio]:checked + .reviews-filter-item {
   position: relative;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
 .reviews-list-loading,
 .reviews-load-failure {
   text-align: center;
@@ -221,7 +204,6 @@ input[type=radio]:checked + .reviews-filter-item {
   width: 40px;
 }
 
->>>>>>> js-htmlacademy/master
 .review-load-failure .review-author {
   visibility: hidden;
 }
@@ -254,7 +236,6 @@ input[type=radio]:checked + .reviews-filter-item {
 .review-rating-four { width: 120px; }
 .review-rating-five { width: 150px; }
 
->>>>>>> js-htmlacademy/master
 .review-author {
   border-radius: 50%;
   height: 124px;
